# raytracer.rs

./: Cargo.toml  LICENSE.txt  README.md
src/: behaviors.rs  lib.rs  main.rs  materials.rs  objects.rs  scenes.rs  utils.rs
src/behaviors/: intersect.rs  scatter.rs
src/materials/: dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs
src/objects/: aabb.rs  bvh.rs  cube.rs  helpers.rs  mesh.rs  nullobject.rs  objectlist.rs  sphere.rs  triangle.rs  world.rs
src/scenes/: airplane.rs  cornell_box.rs  cubes.rs  meshtest.rs  spheres.rs  teapot_with_lights.rs  temple.rs
src/utils/: camera.rs  color.rs  matrix.rs  ray.rs  vector.rs
