[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.8"
# crossbeam = "0.8.1"
rayon = "1.5.2"
# rand = "0.8.5"
rand = { version = "0.8.5", features = ["small_rng"] }
# rand = { version = "0.8.5", features = ["small_rng", "getrandom"], default-features = false }


# [profile.dev]
# opt-level = 0

[profile.release]
debug = true
panic = "abort"
# lto = true
